fix: minor bug fixes
- Initial platforms
- Realistic Score
- Screen Overflow
- Player and Platform Overlap

--- a/src/style.css
+++ b/src/style.css
@@ -18,4 +18,5 @@ body {
   justify-content: center;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
